<resources>
    <string name="app_name">Reco</string>
    <string name="fragment_search_title_search">Search</string>
    <string name="API_URL">https://demo-reco-api.herokuapp.com</string>
    <string name="username_hint">jhn_doe</string>
    <string name="password_hint">******</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="field_required">This field is required.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="suggest_registration">Don\'t have an account?</string>
    <string name="passwords_cannot_be_same">New password cannot be the same as the old one.</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="account_deleted">Account deleted!</string>
    <string name="delete_account_dialog_title">Are you sure you want to delete your account?</string>
    <string name="delete_account_dialog_message">We will miss you, though!</string>
    <string name="delete_account_dialog_option_cancel">Cancel</string>
    <string name="delete_account_dialog_option_delete">DELETE</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="search_bar_hint">Search for music…</string>
    <string name="similarity_placeholder">Matched by %1$d%%</string>
    <string name="welcome_message_placeholder">Welcome back, %1$s!</string>
    <string name="nav_menu_recommendations_item_title">Recomendations</string>
    <string name="nav_menu_library_item_title">Library</string>
    <string name="nav_menu_search_item_title">Search</string>
    <string name="nav_menu_home_item_title">Home</string>
    <string name="no_recommendations_available">No recommendations available.</string>
    <string name="fragment_home_latest_title">Latest</string>
    <string name="settings_title">Settings</string>
    <string name="name_title">Name</string>
    <string name="messenger_url_title">Messenger URL</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="no_search_results">No search results!</string>
    <string name="register">Register</string>
    <string name="name_hint">John Doe</string>
    <string name="login">Login</string>
    <string name="suggest_login">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="messenger_hint">https://m.me/jhndoe</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="recommendations">Recommendations</string>
    <string name="looks_like_your_library_is_empty">Looks like your library is empty!</string>
    <string name="my_library">My Library</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="open_in_messenger">Open in Messenger</string>
    <string name="open_option">Open</string>
</resources>